# wechat-bridge-collector

./: .gitignore  .gitmodules  README.md  connector.json  pyproject.toml  service-registration.json
agent-skill/: README.md  SKILL.md
agent-skill/scripts/: setup_macos.sh
tests/: test_config.py  test_connector_manifest.py  test_db_cache.py  test_methods.py  test_setup_keys.py  test_state.py
wechat_bridge_collector/: app.py  autostart.py  bridge.py  config.py  query_server.py  setup_keys.py  state.py  wechat_source.py
wechat_bridge_collector/scripts/macos/: com.baijimu.wechat-bridge-collector.plist
wechat_bridge_collector/scripts/windows/: start-collector.ps1
