[project]
name = "wechat-bridge-collector"
version = "0.1.0"
description = "Cross-platform WeChat local message collector for bridge-agent events."
requires-python = ">=3.10"
dependencies = [
  "pycryptodome>=3.19,<4",
  "zstandard>=0.22,<1",
]

[project.scripts]
wechat-bridge-collector = "wechat_bridge_collector.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
