[project]
name = "wechat-bridge-collector"
version = "0.2.0"
description = "Cross-platform WeChat local message collector and query service for bridge-agent."
requires-python = ">=3.10"
dependencies = [
  "pycryptodome>=3.19,<4",
  "zstandard>=0.22,<1",
]

[project.scripts]
wechat-bridge-collector = "wechat_bridge_collector.app:main"

[tool.setuptools]
packages = ["wechat_bridge_collector"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
